--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -54,7 +54,7 @@
 
         {% if block.type == 'setup_fee_addon' %}
           <div class="pricing-option addon" {{ block.shopify_attributes }}>
-            <span class="popular-tag">Optional Add-on</span>
+            <span class="popular-tag">Optional<br>Add-On</span>
             
             <div class="price-header">
               <h4>{{ block.settings.addon_name }}</h4>
